Fix align-center issue

--- a/sass/_login.scss
+++ b/sass/_login.scss
@@ -3,6 +3,7 @@
 }
 
 .login-wrapper {
+  margin: auto;
   width: 360px;
 }
 
